modify import logger

--- a/learning_to_compare.ipynb
+++ b/learning_to_compare.ipynb
@@ -34,9 +34,9 @@
     "import torch.nn.functional as F\n",
     "import torchvision.transforms as transforms\n",
     "\n",
+    "from logger import init_log\n",
     "from PIL import Image\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from text_utils.utils.logger import init_log\n",
     "from torch.optim.lr_scheduler import StepLR\n",
     "from torch.autograd import Variable\n",
     "from torch.utils.data.sampler import Sampler\n",
